--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+# just ignore everything for now
+.idea/
+
 ### Eclipse ###
 .apt_generated
 .classpath
