--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,39 @@
 [versions]
+
+# Plugins
 agp = "8.9.2"
 kotlin = "2.0.21"
+
+# Libraries
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
+#junit5 = "5.10.0"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
+media3 = "1.3.1" # Added media3 version
+multiplatformCompose = "1.4.1"
 
+# Android non-libraries
+android-compileSdk = "35"
+android-targetSdk = "33"
+android-minSdk = "24"
+
+# This project's version
+octo-maven-version = "1.0.0-SNAPSHOT"
+octo-maven-group = "net.amazingdomain.octo_flashforge"
+octo-android-versionCode = "1" # must be integer
+octo-android-versionName = "1.0.0"
+octo-android-namespace = "net.amazingdomain.octo_flashforge.android"
 [libraries]
 
 ########### Android libraries
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+#junit5 = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit5" }
+kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
@@ -35,12 +55,18 @@ androidx-media3-common = { group = "androidx.media3", name = "media3-common", ve
 ########### 3rd party for Android
 android-timber = { group = "com.jakewharton.timber", name = "timber", version = "5.0.1" }
 
+########### Compose
+multiplatform-compose-util = {module = "org.jetbrains.compose.ui:ui-util", version.ref = "multiplatformCompose"}
+
+
 ########### Other libraries
 
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version = "2.3.4" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-compose-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 
