--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,51 +1,96 @@
 [versions]
 
+############################
 # Plugins
-agp = "8.9.2"
-kotlin = "2.0.21"
+############################
 
+agp = "8.5.0"
+kotlin = "2.0.21"
+compose = "1.7.3" # https://github.com/JetBrains/compose-jb
+
+############################
 # Libraries
-coreKtx = "1.16.0"
-junit = "4.13.2"
-junitVersion = "1.1.5"
-#junit5 = "5.10.0"
+############################
+
+# Android Libraries
+coreKtx = "1.1.0"
+
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2024.09.00"
+composeBom = "2025.05.00"
 media3 = "1.3.1" # Added media3 version
-multiplatformCompose = "1.4.1"
+
+# Other libraries
+junit = "4.13.2"
+timber="5.0.1"
+ktor="2.3.4"
+
+############################
+# Other
+############################
+
+# java target and compiler
+jvm = "17"
 
 # Android non-libraries
 android-compileSdk = "35"
-android-targetSdk = "33"
+android-targetSdk = "34"
 android-minSdk = "24"
 
 # This project's version
 octo-maven-version = "1.0.0-SNAPSHOT"
+octo-gradle-version = "1.0.0"
 octo-maven-group = "net.amazingdomain.octo_flashforge"
-octo-android-versionCode = "1" # must be integer
+octo-javaPackage = "net.amazingdomain.octo_flashforge"
+
+octo-android-versionCode = "1" # must be integer, and cannot decrease over subsequent releases
 octo-android-versionName = "1.0.0"
 octo-android-namespace = "net.amazingdomain.octo_flashforge.android"
+octo-applicationName = "Octo Flashforge"
+
+#########################################################
+[plugins]
+
+# android
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+
+java-library = { id = "java-library" }
+
+# kotlin for jvm
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+
+# compose
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+#kotlin-compose-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+#########################################################
 [libraries]
+androidGradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+composeGradle = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose" }
+kotlinGradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+android-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
 
 ########### Android libraries
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-#junit5 = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit5" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+
+# compose
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+
 
 ########### Android 2nd party
 androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
@@ -53,20 +98,8 @@ androidx-media3-ui = { group = "androidx.media3", name = "media3-ui", version.re
 androidx-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
 
 ########### 3rd party for Android
-android-timber = { group = "com.jakewharton.timber", name = "timber", version = "5.0.1" }
-
-########### Compose
-multiplatform-compose-util = {module = "org.jetbrains.compose.ui:ui-util", version.ref = "multiplatformCompose"}
-
+android-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
 ########### Other libraries
-
-ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version = "2.3.4" }
-
-[plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-android-library = { id = "com.android.library", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-kotlin-compose-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
