--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,11 +22,13 @@ composeBom = "2025.05.00"
 media3 = "1.3.1" # Added media3 version
 
 # Other libraries
-junit = "4.13.2"
 timber = "5.0.1"    # logs
-ktor = "2.3.4"      # networking
+ktor = "3.1.1"      # networking - vulnerability, upgrade to 3.1.1 (or 3.11?)
 vlcj = "4.11.0"     # plays video over desktop java, using pre-installed vlc
 
+# Testing
+junit = "4.13.2"
+mockk = "1.14.2"
 ############################
 # Other
 ############################
@@ -102,8 +104,6 @@ androidx-media3-common = { group = "androidx.media3", name = "media3-common", ve
 android-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
 ########### Other libraries
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-network = { group = "io.ktor", name = "ktor-network", version.ref = "ktor" }
 ktor-io = { group = "io.ktor", name = "ktor-io", version.ref = "ktor" }
@@ -111,3 +111,8 @@ ktor-io = { group = "io.ktor", name = "ktor-io", version.ref = "ktor" }
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "compose" }
 
 vlcj = { module = "uk.co.caprica:vlcj", version.ref = "vlcj" }
+
+
+########### Testing
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
