--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ media3 = "1.3.1" # Added media3 version
 timber = "5.0.1"    # logs
 ktor = "3.1.1"      # networking - vulnerability, upgrade to 3.1.1 (or 3.11?)
 vlcj = "4.11.0"     # plays video over desktop java, using pre-installed vlc
+kotlin-logging = "3.0.5"
+slf4j = "2.0.7"
 
 # Testing
 junit = "4.13.2"
@@ -110,8 +112,10 @@ ktor-io = { group = "io.ktor", name = "ktor-io", version.ref = "ktor" }
 
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "compose" }
 
-vlcj = { module = "uk.co.caprica:vlcj", version.ref = "vlcj" }
-
+vlcj = { module = "uk.co.caprica:vlcj", version.ref = "vlcj" } # vlc (the ubiquitous video player) for java
+kotlin-logging = { group = "io.github.microutils", name = "kotlin-logging", version.ref = "kotlin-logging" }
+kotlin-logging-jvm = { group = "io.github.microutils", name = "kotlin-logging-jvm", version.ref = "kotlin-logging" }
+slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
 
 ########### Testing
 junit = { group = "junit", name = "junit", version.ref = "junit" }
