--- a/crossplatform/src/main/resources/simplelogger.properties
+++ b/crossplatform/src/main/resources/simplelogger.properties
@@ -14,7 +14,9 @@ org.slf4j.simpleLogger.defaultLogLevel=info
 # Must be one of ("trace", "debug", "info", "warn", or "error").
 # If not specified, the default logging detail level is used.
 #org.slf4j.simpleLogger.log.xxxxx=
-org.slf4j.simpleLogger.log.net.amazingdomain.octo.gcode.MonitorRepository=info
+org.slf4j.simpleLogger.log.net.amazingdomain.octo.networking.MonitorRepository=info
+org.slf4j.simpleLogger.log.net.amazingdomain.octo.testapplication=debug
+org.slf4j.simpleLogger.log.net.amazingdomain.octo.networking=trace
 
 
 # Set to true if you want the current date and time to be included in output messages.
